--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="add_to_cart">add to cart</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="betal">Betal nå</string>
+    <string name="logginn">Logg inn</string>
+    <string name="checkout">Checkout</string>
 </resources>
